--- a/sandium-client/build.gradle
+++ b/sandium-client/build.gradle
@@ -11,6 +11,8 @@ repositories {
 dependencies {
     implementation project(path: ':sandium-common')
 
+    implementation group: 'org.ow2.asm', name: 'asm', version: '9.7.1'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
