--- a/client/build.gradle
+++ b/client/build.gradle
@@ -23,8 +23,9 @@ dependencies {
 
     implementation 'org.ow2.asm:asm:9.9'
 
-    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation platform('org.junit:junit-bom:6.0.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
