Created maven repo for mods

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,28 @@
 spring.application.name=SandiumServer
 
-spring.jpa.hibernate.ddl-auto=update
+# Database Configuration
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:postgresql://localhost:5432/sandium
 spring.datasource.username=sandium
 spring.datasource.password=P@ssw0rd
+
+# Liquibase
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+
+# S3/Linode Object Storage Configuration
+s3.endpoint=${S3_ENDPOINT:https://us-east-1.linodeobjects.com}
+s3.region=${S3_REGION:us-east-1}
+s3.bucket=${S3_BUCKET:sandium-mods}
+s3.access-key=${S3_ACCESS_KEY:}
+s3.secret-key=${S3_SECRET_KEY:}
+
+# Storage Configuration
+storage.default-quota=1073741824
+storage.max-file-size=104857600
+
+# Security
+security.api-key-header=X-API-Key
+
+# File Upload
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
