--- a/server/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,1 +1,7 @@
 databaseChangeLog:
+  - include:
+      file: db/changelog/changes/001-create-users-table.yaml
+  - include:
+      file: db/changelog/changes/002-create-mods-table.yaml
+  - include:
+      file: db/changelog/changes/003-create-mod-versions-table.yaml
