--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,12 +9,13 @@ spring.datasource.password=P@ssw0rd
 # Liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 
-# S3/Linode Object Storage Configuration
+# S3 Object Storage Configuration
 s3.endpoint=${S3_ENDPOINT:https://us-east-1.linodeobjects.com}
 s3.region=${S3_REGION:us-east-1}
 s3.bucket=${S3_BUCKET:sandium-mods}
-s3.access-key=${S3_ACCESS_KEY:}
-s3.secret-key=${S3_SECRET_KEY:}
+# During development comment out to use RamFileService instead of real S3
+#s3.access-key=${S3_ACCESS_KEY:}
+#s3.secret-key=${S3_SECRET_KEY:}
 
 # Storage Configuration
 storage.default-quota=1073741824
